--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" sizes="180x180">
     <link rel="mask-icon" href="/maskable-icon-512x512.png" color="#FFFFFF">
     <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp" />
   </head>
   <body>
     <div id="app"></div>
